github icon fix, email change

--- a/index.html
+++ b/index.html
@@ -236,9 +236,6 @@
 
                             <h4>Ссылки</h4>
                             <ul class="menu">
-                                <!--<li>
-                                    <a href="http://azproduction.ru/WhiteIDE2/">Демо WhiteIDE 2</a>
-                                </li>-->
                                 <li>
                                     <a href="http://habrahabr.ru/blogs/javascript/47879/">Статья о WhiteIDE на Хабре</a>
                                 </li>
@@ -290,12 +287,6 @@
 
                             <h4>Ссылки</h4>
                             <ul class="menu">
-                                <!--<li>
-                                    <a href="http://azproduction.ru/web_worker_wars/">Web Worker Wars home page</a>
-                                </li>
-                                <li>
-                                    <a href="http://azproduction.ru/web_worker_wars/arena.html#ZRV1vYGY&ZRV1vYGY">Web Worker Wars demo fight</a>
-                                </li>-->
                                 <li>
                                     <a href="http://habrahabr.ru/blogs/programmers_games/110540/">Статья о Web Worker Wars на Хабре</a>
                                 </li>
@@ -345,9 +336,6 @@
 
                             <h4>Ссылки</h4>
                             <ul class="menu">
-                                <!--<li>
-                                    <a href="http://azproduction.ru/wiki/terminal/">Демо InfoTerminal</a>
-                                </li>-->
                                 <li>
                                     <a href="http://habrahabr.ru/blogs/webdev/55197/">Статья о InfoTerminal на Хабре</a>
                                 </li>
@@ -577,10 +565,7 @@
                     
                     <div class="column span-7 last">
                         <h2>Мне интересно</h2>
-                        <p>JavaScript, Ruby, фотография, психология,
-                        оцифровка мира, численные методы, Япония, японский язык, 
-                        mmorpg, jrpg, anime, кулинария, космос, детективы, 
-                        популярная наука</p>
+                        <p>JavaScript, Node.js</p>
                         <h2>Контакты</h2>
                         <div id="hcard-milhail-davydov" class="vcard">
                             <div class="fn n">
@@ -594,7 +579,7 @@
                             <div>
                                 <a class="org url" href="http://azproduction.ru/">A.Z.Production</a>
                             </div>
-                            <a class="email" href="mailto:azazel.private@gmail.com">azazel.private@gmail.com</a>
+                            <a class="email" href="mailto:i@azproduction.ru">i@azproduction.ru</a>
                             <div class="adr">
                                 <span class="locality">Екатеринбург</span>,
                                 <span class="region">Свердловская область</span>,
@@ -606,12 +591,6 @@
                                     <span class="tel">+79090115050</span>
                                 </li>
                                 <li>
-                                    <span class="x-icq" title="Номер ICQ">317984441</span>
-                                </li>
-                                <li>
-                                    <a class="url x-skype-username" href="skype:a.z.production?add" title="Пользователь Skype">a.z.production</a>
-                                </li>
-                                <li>
                                     <a class="url x-jabber" href="xmpp:azproduction@jabber.ru" title="Jabber ID">azproduction@jabber.ru</a>
                                 </li>
                                 <li>
@@ -619,9 +598,6 @@
                                 </li>
                                 <li>
                                     <a class="url x-habrahabr" href="http://azproduction.habrahabr.ru/">Я на Habrahabr.ru</a>
-                                </li>
-                                <li>
-                                    <a class="url x-free-lance" href="http://www.free-lance.ru/users/azproduction/">Я на Free-lance.ru</a>
                                 </li>
                                 <li>
                                     <a class="url x-moikrug" href="http://azproduction.moikrug.ru/">Я на Moikrug.ru</a>
