--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </div>
 
                     <div class="project column span-11">
-                        <h3>Scaleable Js App </h3>
+                        <h3>Salable Js App </h3>
                         <p>
                             Шаблон для создания масштабируемых JavaScript приложений
                         </p>
