--- a/index.html
+++ b/index.html
@@ -105,6 +105,23 @@
                 <h2>Текущие OpenSource проекты</h2>
                 <div class="column span-22">
                     <div class="project column span-11">
+                        <h3>Autopolyfiller</h3>
+                        <p>
+                            Не нужно больше думать о том какой полифилл нужно подключить. Autopolyfiller понимает ваш код
+                            и находит все полифиллы для тех броузеров, которые вы поддерживаете.
+                        </p>
+
+                        <ul class="menu">
+                            <li>
+                                <a href="http://azproduction.ru/autopolyfiller/">Демо Autopolyfiller</a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/azproduction/autopolyfiller" target="_blank">Autopolyfiller на GitHub</a>
+                            </li>
+                        </ul>
+                    </div>
+                    
+                    <div class="project column span-11">
                         <h3>2Layer Project</h3>
                         <p>
                             2Layer &mdash; фото-проект, разбавляющий жизнь дополнительной реальностью. Он разрабатывается силами
