--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     </div>
 
                     <div class="project column span-11 last">
-                        <h3>Salable Js App </h3>
+                        <h3>Scalable Js App </h3>
                         <p>
                             Шаблон для создания масштабируемых JavaScript приложений
                         </p>
