--- a/404.html
+++ b/404.html
@@ -2,6 +2,6 @@
 <head><title>404 Not Found</title></head>
 <body bgcolor="white">
 <center><h1>404 Not Found</h1></center>
-<hr><center>Elektronika MK-98 &mdash; If you are looking for some code example, please, ask owner of this <a href="/">site</a>.</center>
+<hr><center>Elektronika MK-98 &mdash; If you are looking for some code example, please, ask <a href="/">owner</a>.</center>
 </body>
 </html>
