--- a/index.html
+++ b/index.html
@@ -1,80 +1,9 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Mikhail Davydov &mdash; JavaScript/Node Developer</title>
-        <meta name="format-detection" content="telephone=no">
-        <meta name="description" content="Mikhail Davydov &mdash; JavaScript/Node Developer">
-        <meta name="keywords" content="mikhail davydov, photography, developer, javascript, react, nodejs">
-        <meta property="og:title" content="Mikhail Davydov">
-        <meta property="og:description" content="JavaScript/Node Developer">
-        <meta property="og:image" content="http://www.gravatar.com/avatar/3298d6e26223d78fc523fa98a86c8ffc?s=150">
-        <meta property="og:type" content="website">
-        <meta name="viewport" content="width=400, user-scalable=yes">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <div class="b-page">
-            <div class="b-head">
-                <div class="b-head__photo-container">
-                    <a href="https://github.com/azproduction" target="_blank">
-                        <img alt="MD" src="http://www.gravatar.com/avatar/3298d6e26223d78fc523fa98a86c8ffc?s=150" width="80" height="80" class="b-head__photo"/>
-                    </a>
-                </div>
-                <h1 class="b-head__title">Mikhail Davydov</h1>
-                <div class="b-head__sub-title">JavaScript/Node Developer</div>
-                <div class="b-head__location">Berlin, Germany</div>
-            </div>
-            <ul class="b-content">
-                <li class="b-content__item">
-                    <a href="https://github.com/azproduction" target="_blank" class="b-content__link">
-                        <svg width="24" height="24" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M512 0C229.252 0 0 229.252 0 512c0 226.25 146.688 418.126 350.155 485.813 25.593 4.686 34.937-11.125 34.937-24.626 0-12.188-.47-52.562-.718-95.314-128.708 23.46-161.707-31.54-172.47-60.373-5.524-14.81-30.406-60.25-52.397-72.263-17.988-9.828-43.26-33.237-.917-33.735 40.434-.476 69.348 37.308 78.47 52.75 45.94 77.75 119.877 55.627 149 42.5 4.654-33 17.902-55.627 32.5-68.373-113.656-12.94-233.22-56.876-233.22-253.064 0-55.94 19.97-101.56 52.66-137.404-5.22-13-22.845-65.095 5.062-135.563 0 0 42.937-13.75 140.81 52.5 40.812-11.406 84.595-17.03 128.125-17.22 43.5.188 87.314 5.874 128.188 17.28 97.69-66.31 140.686-52.5 140.686-52.5 28 70.53 10.376 122.563 5.125 135.498 32.81 35.844 52.626 81.468 52.626 137.404 0 196.686-119.75 240-233.812 252.686 18.44 15.876 34.748 47 34.748 94.748 0 68.437-.686 123.627-.686 140.5 0 13.626 9.312 29.562 35.25 24.563C877.436 929.997 1024 738.125 1024 512 1024 229.252 794.748 0 512 0z"/>
-                        </svg>
-                        Open-Source Projects
-                    </a>
-                </li>
-                <li class="b-content__item">
-                    <a href="https://de.linkedin.com/in/azproduction/en" target="_blank" class="b-content__link">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 430.117 430.118">
-                            <path fill="#0077b5" d="M398.355 0H31.782C14.23 0 .002 13.793.002 30.817v368.47c0 17.026 14.232 30.83 31.78 30.83h366.573c17.55 0 31.76-13.813 31.76-30.83V30.818c0-17.02-14.21-30.817-31.76-30.817zM130.4 360.038H65.413V165.845H130.4v194.193zM97.913 139.315h-.437c-21.793 0-35.92-14.904-35.92-33.563 0-19.035 14.542-33.535 36.767-33.535 22.227 0 35.9 14.496 36.33 33.535 0 18.663-14.098 33.563-36.74 33.563zM364.66 360.038h-64.967v-103.9c0-26.107-9.413-43.92-32.907-43.92-17.973 0-28.642 12.017-33.327 23.62-1.737 4.144-2.167 9.94-2.167 15.728v108.468H166.34s.85-175.98 0-194.192h64.963v27.53c8.624-13.228 24.035-32.1 58.534-32.1 42.76 0 74.822 27.74 74.822 87.415v111.35zM230.882 193.99c.11-.182.266-.4.42-.614v.614h-.42z"/>
-                        </svg>
-                        LinkedIn Profile
-                    </a>
-                </li>
-                <li class="b-content__item">
-                    <a href="https://www.flickr.com/photos/azproduction/" target="_blank" class="b-content__link">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 90 90">
-                            <path fill="#0063dc" d="M20.17 25C9.03 25 0 33.955 0 45.004 0 56.047 9.03 65 20.17 65s20.168-8.953 20.168-19.996c0-11.05-9.03-20.004-20.17-20.004z"/>
-                            <path fill="#ff0084" d="M90 45.004C90 56.047 80.973 65 69.83 65c-11.14 0-20.17-8.953-20.17-19.996C49.66 33.954 58.69 25 69.83 25 80.973 25 90 33.955 90 45.004z"/>
-                        </svg>
-                        Photography
-                    </a>
-                </li>
-                <li class="b-content__item">
-                    <a href="https://facebook.com/azproduction" target="_blank" class="b-content__link">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 90 90">
-                            <path fill="#3b5998" d="M90 15c0-7.88-7.116-15-15-15H15C7.116 0 0 7.12 0 15v60c0 7.88 7.116 15 15 15h30V56H34V41h11v-5.844C45 25.076 52.568 16 61.875 16H74v15H61.875C60.548 31 59 32.61 59 35.024V41h15v15H59v34h16c7.884 0 15-7.12 15-15V15z"/>
-                        </svg>
-                        Facebook
-                    </a>
-                </li>
-                <li class="b-content__item">
-                    <a href="https://twitter.com/azproduction" target="_blank" class="b-content__link">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 430.117 430.117">
-                            <path fill="#1dcaff" d="M381.384 198.64c24.157-1.994 40.543-12.976 46.85-27.877-8.715 5.353-35.765 11.19-50.704 5.63-.732-3.51-1.55-6.843-2.353-9.853-11.383-41.798-50.357-75.472-91.194-71.404 3.304-1.334 6.655-2.576 9.996-3.69 4.494-1.61 30.867-5.902 26.714-15.21-3.5-8.19-35.722 6.187-41.79 8.066 8.01-3.012 21.255-8.193 22.674-17.396-12.27 1.683-24.315 7.484-33.622 15.92 3.36-3.618 5.91-8.026 6.45-12.77C241.68 90.963 222.563 133.113 207.092 174c-12.148-11.773-22.915-21.044-32.574-26.192-27.097-14.53-59.496-29.692-110.355-48.572-1.56 16.827 8.322 39.2 36.8 54.08-6.17-.826-17.453 1.017-26.477 3.178 3.675 19.277 15.677 35.16 48.17 42.84-14.85.98-22.524 4.358-29.48 11.64 6.764 13.408 23.267 29.187 52.954 25.948-33.006 14.226-13.458 40.57 13.4 36.642C113.712 320.887 41.48 317.41 0 277.828c108.3 147.572 343.716 87.274 378.8-54.866 26.284.224 41.736-9.105 51.317-19.39-15.144 2.57-37.094-.086-48.733-4.933z"/>
-                        </svg>
-                        Tweets
-                    </a>
-                </li>
-                <li class="b-content__item">
-                    <a href="https://speakerdeck.com/azproduction" target="_blank" class="b-content__link b-content__link_no-icon">
-                        Talks
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <script type="text/javascript">(function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter20918182 = new Ya.Metrika({id:20918182, webvisor:true, clickmap:true, trackLinks:true, accurateTrackBounce:true}); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks");</script><noscript><div><img src="//mc.yandex.ru/watch/20918182" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-    </body>
+<head>
+    <meta http-equiv="refresh" content="0;url=http://azproduction.me">
+</head>
+<body>
+    <a href="http://azproduction.me/" style="text-decoration: none; color: #ccc">&rarr; azproduction.me</a>
+</body>
 </html>
